--- a/smartcontract/rust/tip-100-incompatible-sc/Cargo.toml
+++ b/smartcontract/rust/tip-100-incompatible-sc/Cargo.toml
@@ -1,10 +1,10 @@
   
 [package]
 edition = "2018"
-name = "tip_100"
-description = "This is an implementation of the TIP-100 standard for ISCP (IOTA Smart Contract Protocol)"
+name = "not_tip_100"
+description = "This is a contract incompatible with the TIP-100 standard for ISCP (IOTA Smart Contract Protocol)"
 license = "MIT"
-version = "0.0.1"
+version = "1.0.0"
 authors = ["Th3B0Y <constantlychanging@pm.me>"]
 repository = "https://github.com/brunoamancio/IOTA-SC-TIP100"
 
@@ -18,9 +18,7 @@ default = ["console_error_panic_hook"]
 console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 
-wasmlib = { path = "wasp/contracts/rust/wasmlib" }
-iota_sc_utils = { path = "iota_sc_utils" }
-iota-sc-hname-generator = "1.1.1"
+wasmlib = { git = "https://github.com/brunoamancio/Wasm-lib", tag="v0.1.0" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
