Changed readme file. Updated iota_sc_utils version to 0.8.8.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "**/LICENSE": true,
     "**/go.sum": true,
     "**/.git*": true,
-    "*.md": true,
+   // "*.md": true,
 
     "general-docs": true,
     "**/target/": true,
